Sorgente/.apex/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Cliente_Professional__c</fullName>
        <label>Cliente Professional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maxi_rata__c</fullName>
        <label>Maxi rata</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Metodo_di_pagamento_kit__c</fullName>
        <label>Metodo di pagamento kit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonifico</fullName>
                </value>
                <value>
                    <fullName>Carta di credito</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
                <value>
                    <fullName>Giroconto postale</fullName>
                </value>
                <value>
                    <fullName>Contanti o assegno alla consegna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metodo_di_pagamento_servizio__c</fullName>
        <label>Metodo di pagamento servizio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonifico</fullName>
                </value>
                <value>
                    <fullName>SDD</fullName>
                </value>
                <value>
                    <fullName>Giroconto</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Carta di credito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modalit_di_pagamento_servizio__c</fullName>
        <label>Modalità di pagamento servizio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unica soluzione</fullName>
                </value>
                <value>
                    <fullName>Dilazione pagamento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_sconto__c</fullName>
        <label>Motivazione sconto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Già cliente</fullName>
                </value>
                <value>
                    <fullName>Programma amico</fullName>
                </value>
                <value>
                    <fullName>Medico</fullName>
                </value>
                <value>
                    <fullName>Dipendente</fullName>
                </value>
                <value>
                    <fullName>Adesione multipla</fullName>
                </value>
                <value>
                    <fullName>i-Contrazioni</fullName>
                </value>
                <value>
                    <fullName>Parente dipendente</fullName>
                </value>
                <value>
                    <fullName>Genoma</fullName>
                </value>
                <value>
                    <fullName>Cross selling</fullName>
                </value>
                <value>
                    <fullName>Fiera</fullName>
                </value>
                <value>
                    <fullName>Promozioni temporane</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_rate__c</fullName>
        <label>Numero rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_up_prodotti_sconto__c</fullName>
        <label>Roll-up sconto programma amico</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Description</field>
            <operation>equals</operation>
            <value>SCONTO PROGRAMMA AMICO</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_sconto_cross_selling__c</fullName>
        <label>Roll-up sconto cross selling</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Description</field>
            <operation>equals</operation>
            <value>SCONTO CROSS SELLING</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_sconto_gi_cliente__c</fullName>
        <label>Roll-up sconto già cliente</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Description</field>
            <operation>equals</operation>
            <value>SCONTO GIA&apos; CLIENTE</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salva_pagamento_senza_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salva pagamento senza CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sconto_su_Kit__c</fullName>
        <label>Sconto su Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sconto_su_Servizio__c</fullName>
        <label>Sconto su Servizio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>